[package]
name = "egui-miniquad"
version = "0.8.0"
authors = ["Logachev Fedor <not.fl3@gmail.com>", "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings between egui and miniquad"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/not-fl3/egui-miniquad"
repository = "https://github.com/not-fl3/egui-miniquad"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
miniquad = { git = "https://github.com/not-fl3/miniquad", branch = "master" }
quad-url = { git = "https://github.com/optozorax/quad-url", branch = "master" }

# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.7"

[dev-dependencies]
egui_demo_lib = { version = "0.16.0", default-features = false }
glam = "0.20"

[profile.release]
opt-level = 2 # fast and small wasm
